apps/dashboard/src/app/resources/resource-list.component.scss
@import 'variables';

$table-breakpoint: 1400px;

.resource-list {
  padding: rhythm(5) var(--app-layout-margin-right) rhythm(8) 5%;
  position: relative;
  min-height: rhythm(24);
}

.resource-list-header {
  align-items: center;
  background-color: $color-light-stronger;
  border-bottom: 1px solid $color-neutral-lighter;
  display: flex;
  justify-content: space-between;
  margin-bottom: rhythm(4);
  padding-bottom: rhythm(1);
  position: sticky;
  top: var(--app-topbar-height);
  z-index: 10;

  .search-bar-container {
    align-items: center;
    display: flex;
    gap: rhythm(1);

    pa-select {
      width: rhythm(16);
    }
  }

  .status-buttons-container {
    align-items: center;
    display: flex;
    gap: rhythm(2);
    justify-content: flex-end;
    min-width: rhythm(24);

    .status-button {
      align-items: center;
      display: flex;
      gap: rhythm(0.25);
    }
    .file-count {
      font-size: font-size(l);
      font-weight: $font-weight-bold;
      line-height: line-height(m);
    }
  }
}

.resource-filters {
  padding: 0 rhythm(3) 0 rhythm(1.5);
  .title-filter {
    max-width: 35%;
  }
}

.resource-table-header {
  align-items: center;
  background-color: $color-light-stronger;
  display: flex;
  height: rhythm(8);
  position: sticky;
  top: calc(var(--app-topbar-height) + #{rhythm(7)} + 1px);
  z-index: 10;

  .resource-bulk-actions {
    align-items: center;
    display: flex;
    font-weight: $font-weight-regular;
    gap: rhythm(2);
    padding-left: rhythm(0.5);
  }

  .table-options {
    align-items: center;
    display: flex;
    gap: rhythm(2);
    justify-content: space-between;
    margin-left: auto;
  }
}

.table-container {
  position: relative;
  max-height: 100%;
  overflow: auto;
}

table {
  width: 100%;
  border-spacing: 0;

  .cdk-header-cell {
    height: rhythm(5);
    border-bottom: 1px solid $color-dark-stronger;
  }

  .cdk-cell {
    height: rhythm(6);
    border-bottom: 1px solid $color-neutral-regular;
  }

  .cdk-column-select {
    padding-left: rhythm(0.5);
    width: rhythm(5);
  }

  .title-icon {
    align-items: center;
    display: flex;
    gap: rhythm(1);
  }

  .title-and-description small {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
  }

  .label-container {
    display: flex;
    gap: rhythm(0.5);
  }
  .cdk-column-title {
    a {
      color: inherit;
      text-decoration: none;
    }
  }

  .cdk-column-modification,
  .cdk-column-language,
  .cdk-column-status,
  .cdk-column-actions {
    text-align: center;
  }

  .cdk-column-classification {
    width: rhythm(22);
    @media (max-width: $table-breakpoint) {
      width: rhythm(16);
    }
  }

  .cdk-column-modification {
    width: rhythm(22);
    @media (max-width: $table-breakpoint) {
      width: rhythm(16);
    }
  }

  .cdk-column-status {
    width: rhythm(20);
    @media (max-width: $table-breakpoint) {
      width: rhythm(12);
    }
  }

  .cdk-column-language {
    width: rhythm(20);
    @media (max-width: $table-breakpoint) {
      width: rhythm(16);
    }
  }

  .cdk-column-actions {
    width: rhythm(14);
    padding-left: rhythm(4);
    @media (max-width: $table-breakpoint) {
      width: rhythm(10);
      padding-left: rhythm(2);
    }
  }
  .clickable {
    cursor: pointer;
  }
}

.pagination {
  padding: rhythm(5) 0;
}

::ng-deep .mat-menu-panel.resource-actions {
  min-width: 0;
  min-height: 0;
  border-radius: 0;
  box-shadow: var(--stf-shadow-dropdown);
  .mat-menu-content {
    padding: 0;
  }
}

.loading-shade {
  position: absolute;
  top: 0;
  left: 0;
  bottom: rhythm(7);
  right: 0;
  background: rgba(0, 0, 0, 0.15);
  z-index: 20;
  display: flex;
  align-items: center;
  justify-content: center;
}

